Compatible /w express@5.0.0-alpha.1

--- a/demo/package.json
+++ b/demo/package.json
@@ -6,7 +6,7 @@
     "start": "coffee ./app.coffee"
   },
   "dependencies": {
-    "express": "~4.2.0",
+    "express": "*",
     "static-favicon": "~1.0.0",
     "morgan": "~1.0.0",
     "cookie-parser": "~1.0.1",
