--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wx",
-  "version": "0.0.23",
+  "version": "0.0.25",
   "description": "W(ei)X(in) -- (minimalist) WeChat Middleware for Express.js",
   "main": "lib/wx.js",
   "dependencies": {
@@ -13,7 +13,8 @@
     "redis": "*",
     "request" : "*",
     "node-uuid" : "*",
-    "async": "*"
+    "async": "*",
+    "qs": "*"
   },
   "devDependencies": {},
   "scripts": {
